--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
   <title>AvinivA | BIR Compliance Checklist</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; }
+    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; line-height: 1.6; }
     header { text-align: center; padding: 30px 0; }
-    header img { width: 260px; }
-    .section { max-width: 850px; margin: auto; padding: 40px 20px; }
-    h2 { text-align: center; font-weight: 700; margin-bottom: 25px; }
-    ul { line-height: 1.9; font-size: 16px; }
-    li { margin-bottom: 6px; }
-    .form-input { width: 100%; padding: 14px; margin-bottom: 12px; border-radius: 5px; border: 1px solid #bbb; font-size: 16px; }
-    .btn-orange { background:#F36F21; color:#fff; border:none; padding:16px; width:100%; font-size:16px; cursor:pointer; border-radius:6px; font-weight:600; }
-    .btn-meeting { background:#6A4CAF; color:#fff; padding:14px 24px; border-radius:6px; display:block; margin:35px auto 15px auto; border:none; cursor:pointer; font-size:16px; font-weight:600; text-decoration: none; text-align: center; }
+    header img { width: 260px; display: block; margin: 0 auto; }
+    .section { max-width: 850px; margin: 0 auto; padding: 40px 20px; }
+    h2 { text-align: center; font-weight: 700; margin-bottom: 25px; color: #4a2c8c; }
+    ul { line-height: 1.9; font-size: 16px; list-style: none; padding: 0; }
+    li { margin-bottom: 6px; position: relative; padding-left: 28px; }
+    li:before { content: "Checkmark"; position: absolute; left: 0; color: #2e8b57; font-weight: bold; }
+    .form-input { width: 100%; padding: 14px; margin-bottom: 12px; border-radius: 5px; border: 1px solid #bbb; font-size: 16px; box-sizing: border-box; }
+    .btn-orange { background:#F36F21; color:#fff; border:none; padding:16px; width:100%; font-size:16px; cursor:pointer; border-radius:6px; font-weight:600; display: block; margin: 0 auto; }
+    .btn-meeting { background:#6A4CAF; color:#fff; padding:14px 24px; border-radius:6px; display:block; margin:35px auto 15px auto; border:none; cursor:pointer; font-size:16px; font-weight:600; text-decoration: none; text-align: center; width: fit-content; }
     footer { text-align:center; padding:50px 0; font-size:14px; color:#444; }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo-main.png" alt="AvinivA">
+    <img src="./logo-main.png" alt="AvinivA">
   </header>
   <div class="section">
     <h2>What You’ll Get Inside:</h2>
     <ul>
-      <li>✅ Step-by-step BIR audit readiness checklist</li>
-      <li>✅ Common compliance mistakes that trigger fines — and how to avoid them</li>
-      <li>✅ Proper document storage + digital archiving guidelines</li>
-      <li>✅ Bonus: Odoo localization tips for faster PH reporting</li>
+      <li>Step-by-step BIR audit readiness checklist</li>
+      <li>Common compliance mistakes that trigger fines — and how to avoid them</li>
+      <li>Proper document storage + digital archiving guidelines</li>
+      <li>Bonus: Odoo localization tips for faster PH reporting</li>
     </ul>
     <form action="https://script.google.com/macros/s/AKfycbzhnnurhv44Y-zmJi5NtZ6rXFKFNcA9H0HqKl5Ugx1_3wC6Z4wlg-Da2thaB57gKoYtbg/exec" method="POST" target="hiddenframe">
       <input type="text" name="Name" class="form-input" placeholder="Full Name" required>
@@ -54,6 +55,7 @@
     }
     document.querySelector('form').addEventListener('submit', function() {
       this.querySelector('input[name="Timestamp"]').value = new Date().toISOString();
+      setTimeout(function() { window.location.href = './bir-compliance-checklist.pdf'; }, 1000);
     });
   </script>
 </body>
