--- a/index.html
+++ b/index.html
@@ -6,25 +6,26 @@
   <title>AvinivA | BIR Compliance Checklist</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; background: #fff; color: #333; line-height: 1.6; }
+    * { box-sizing: border-box; }
+    body { font-family: 'Montserrat', sans-serif; margin: 0; background: #fff; color: #333; line-height: 1.6; }
     header { text-align: center; padding: 30px 0; }
-    header img { width: 260px; display: block; margin: 0 auto; }
-    .section { max-width: 850px; margin: 0 auto; padding: 40px 20px; }
-    h2 { text-align: center; font-weight: 700; margin-bottom: 25px; color: #4a2c8c; }
-    ul { line-height: 1.9; font-size: 16px; list-style: none; padding: 0; }
-    li { margin-bottom: 6px; position: relative; padding-left: 28px; }
+    header img { max-width: 260px; height: auto; }
+    .container { max-width: 850px; margin: 0 auto; padding: 20px; }
+    h2 { text-align: center; color: #4a2c8c; font-weight: 700; margin: 30px 0 20px; }
+    ul { padding: 0; list-style: none; }
+    li { padding-left: 30px; position: relative; margin: 12px 0; font-size: 16px; }
     li:before { content: "Checkmark"; position: absolute; left: 0; color: #2e8b57; font-weight: bold; }
-    .form-input { width: 100%; padding: 14px; margin-bottom: 12px; border-radius: 5px; border: 1px solid #bbb; font-size: 16px; box-sizing: border-box; }
-    .btn-orange { background:#F36F21; color:#fff; border:none; padding:16px; width:100%; font-size:16px; cursor:pointer; border-radius:6px; font-weight:600; display: block; margin: 0 auto; }
-    .btn-meeting { background:#6A4CAF; color:#fff; padding:14px 24px; border-radius:6px; display:block; margin:35px auto 15px auto; border:none; cursor:pointer; font-size:16px; font-weight:600; text-decoration: none; text-align: center; width: fit-content; }
-    footer { text-align:center; padding:50px 0; font-size:14px; color:#444; }
+    input { width: 100%; padding: 14px; margin: 10px 0; border: 1px solid #ccc; border-radius: 6px; font-size: 16px; }
+    button { background: #F36F21; color: white; border: none; padding: 16px; font-size: 16px; font-weight: 600; border-radius: 6px; cursor: pointer; width: 100%; margin: 15px 0; }
+    .meeting { background: #6A4CAF; width: auto; display: block; margin: 30px auto; padding: 14px 30px; }
+    footer { text-align: center; padding: 40px 20px; font-size: 14px; color: #555; }
   </style>
 </head>
 <body>
   <header>
-    <img src="./logo-main.png" alt="AvinivA">
+    <img src="logo-main.png" alt="AvinivA Logo" onerror="this.style.display='none'">
   </header>
-  <div class="section">
+  <div class="container">
     <h2>What You’ll Get Inside:</h2>
     <ul>
       <li>Step-by-step BIR audit readiness checklist</li>
@@ -32,31 +33,37 @@
       <li>Proper document storage + digital archiving guidelines</li>
       <li>Bonus: Odoo localization tips for faster PH reporting</li>
     </ul>
-    <form action="https://script.google.com/macros/s/AKfycbzhnnurhv44Y-zmJi5NtZ6rXFKFNcA9H0HqKl5Ugx1_3wC6Z4wlg-Da2thaB57gKoYtbg/exec" method="POST" target="hiddenframe">
-      <input type="text" name="Name" class="form-input" placeholder="Full Name" required>
-      <input type="text" name="Company" class="form-input" placeholder="Company Name" required>
-      <input type="email" name="Email" class="form-input" placeholder="Work Email" required>
-      <input type="tel" name="Phone" class="form-input" placeholder="Mobile Number" required>
-      <input type="hidden" name="Timestamp" value="">
-      <button type="submit" class="btn-orange">Get the Free BIR Compliance Checklist</button>
+
+    <form id="leadForm" action="https://script.google.com/macros/s/AKfycbzhnnurhv44Y-zmJi5NtZ6rXFKFNcA9H0HqKl5Ugx1_3wC6Z4wlg-Da2thaB57gKoYtbg/exec" method="POST" target="hidden">
+      <input type="text" name="Name" placeholder="Full Name" required>
+      <input type="text" name="Company" placeholder="Company Name" required>
+      <input type="email" name="Email" placeholder="Work Email" required>
+      <input type="tel" name="Phone" placeholder="Mobile Number" required>
+      <input type="hidden" name="Timestamp" id="timestamp">
+      <button type="submit">Get the Free BIR Compliance Checklist</button>
     </form>
-    <iframe name="hiddenframe" style="display:none;"></iframe>
+    <iframe name="hidden" style="display:none;"></iframe>
+
+    <button class="meeting" onclick="window.open('https://calendar.app.google/Ry8MNuKREhSSHiPh6','_blank')">Book a Meeting</button>
+
+    <footer>
+      <strong>AvinivA Contact:</strong><br>
+      Don Ariel C. Florencio, Head of Enterprise Sales<br>
+      WhatsApp/Viber: +63.956.598.2412<br>
+      Email: <a href="mailto:don@aviniva.com">don@aviniva.com</a>
+    </footer>
   </div>
-  <button class="btn-meeting" onclick="openCalendarPopup()">Book a Meeting</button>
-  <footer>
-    <strong>AvinivA Contact:</strong><br>
-    Don Ariel C. Florencio, Head of Enterprise Sales<br>
-    WhatsApp/Viber: +63.956.598.2412<br>
-    Email: <a href="mailto:don@aviniva.com">don@aviniva.com</a>
-  </footer>
+
   <script>
-    function openCalendarPopup() {
-      window.open("https://calendar.app.google/Ry8MNuKREhSSHiPh6", "popup", "width=600,height=750");
-    }
-    document.querySelector('form').addEventListener('submit', function() {
-      this.querySelector('input[name="Timestamp"]').value = new Date().toISOString();
-      setTimeout(function() { window.location.href = './bir-compliance-checklist.pdf'; }, 1000);
-    });
+    document.getElementById('leadForm').onsubmit = function() {
+      document.getElementById('timestamp').value = new Date().toISOString();
+      setTimeout(() => {
+        const link = document.createElement('a');
+        link.href = 'bir-compliance-checklist.pdf';
+        link.download = 'BIR-Compliance-Checklist.pdf';
+        link.click();
+      }, 1200);
+    };
   </script>
 </body>
 </html>
