--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     h2 { text-align: center; color: #4a2c8c; font-weight: 700; margin: 30px 0 20px; }
     ul { padding: 0; list-style: none; }
     li { padding-left: 30px; position: relative; margin: 12px 0; font-size: 16px; }
-    li:before { content: "Checkmark"; position: absolute; left: 0; color: #2e8b57; font-weight: bold; }
+    li:before { content: ""; position: absolute; left: 0; color: #2e8b57; font-weight: bold; }
     input { width: 100%; padding: 14px; margin: 10px 0; border: 1px solid #ccc; border-radius: 6px; font-size: 16px; }
     button { background: #F36F21; color: white; border: none; padding: 16px; font-size: 16px; font-weight: 600; border-radius: 6px; cursor: pointer; width: 100%; margin: 15px 0; }
     .meeting { background: #6A4CAF; width: auto; display: block; margin: 30px auto; padding: 14px 30px; }
